src/test/compile-fail/alt-tag-nullary.rs
// error-pattern: mismatched types

enum a { A, }
enum b { B, }

fn main() { let x: a = A; alt x { B { } } }

